# non-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cogs/: error_handler.py  mememo.py  test.py
helpers/: gen.py
