[tool.poetry]
name = "non-bot"
version = "0.2.0"
description = "A discord bot named 'non-bot'"
authors = ["Me"]

[tool.poetry.scripts]
start = "python main.py" # BRU. how to use this

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-py-slash-command = "^2.3.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
